# cpp_cmake_project_template

./: .gitmodules  CMakeLists.txt  supermarine_build_env.cmake
include/: CMakeLists.txt  ExampleClass.hpp
src/: ExampleClass.cpp
src/executables/: hello_world.cpp
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt  ExampleTests.cpp
tests/test_support/: test_runner.cpp
